# monadic-synth

./: .gitignore  .merlin  CHANGES.md  IMPLEMENTATION.md  Makefile  NOTES.md  README.md  dune-project  index.html  msynth.opam  opam
.github/workflows/: build.yml
doc/: Makefile  github.css
docs/: Makefile  github.css  index.html
docs/ocamldoc/: Board.html  Extlib.Complex.html  Extlib.File.html  Extlib.Float.html  Extlib.List.html  Extlib.Option.html  Extlib.Random.html  Extlib.String.html  Extlib.html  Instrument.html  MIDI.html  Math.Osc.html  Math.html  Note.Drum.html  Note.html  OSC.html  Op.Filter.html  Op.Output.html  Op.Ref.html  Op.Sample.Ringbuffer.html  Op.Sample.html  Op.State.html  Op.Stream.html  Op.html  Operator.Ref.html  Operator.V.html  Operator.Value.html  Operator.html  Pattern.html  Stream.B.html  Stream.Common.html  Stream.Distortion.html  Stream.Envelope.html  Stream.Event.html  Stream.Filter.html  Stream.Operations.html  Stream.Ref.html  Stream.Ringbuffer.html  Stream.Sample.Ringbuffer.html  Stream.Sample.html  (+73 more)
examples/: .gitignore  Makefile  basic.drums  better_off_alone.ml  bug.ml  c1.drums  doc.ml  dune  filter.ml  fm_arpeggiator.ml  midi.ml  noise.ml  obx  obx.ml  r2d2.ml  sine  sine.ml  song0  song0.ml  song1  song1.ml  song2  song2.ml  song3  song3.ml  spectral.ml  tabulated.ml  testop.ml  theremin.ml  thx  thx.ml  trance.ml
examples/wav/: Makefile
experiments/compiler/: Makefile  monads.ml  stream.ml
experiments/two-monads/: Makefile  extlib.ml  op.ml  test.ml
odoc/: index.html
odoc/alsa/: index.html
odoc/alsa/Alsa/: index.html
odoc/msynth/: index.html
odoc/msynth/Msynth/: index.html
odoc/msynth/Msynth__Board/: index.html
odoc/msynth/Msynth__Extlib/: index.html
odoc/msynth/Msynth__MIDI/: index.html
src/: MIDI.ml  Makefile  OCamlMakefile  OSC.ml  TODO.md  board.ml  common.ml  dune  extlib.ml  formal.ml  instrument.ml  math.ml  note.ml  op.ml  operator.ml  output.ml  pattern.ml  sparse.ml  stdlib.ml  stream.ml  visu.ml
src/test/: .gitignore  Makefile  bug.ml  doc.ml  fm_arpeggiator.ml  midi.ml  song0.ml  song1.ml  song2.ml  song3.ml  spectral.ml  thx.ml  trance.ml
(+51 files in other folders)
